@@ -124,6 +124,14 @@ input[type='color'] {
     }
 }
 
+.input-file {
+    & input[type='file'] {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+    }
+}
+
 /* Hide empty image displayed as broken image */
 [src=''] {
     visibility: hidden;
